--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "ejs": "^2.6.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-handlebars": "^3.0.0",
+    "express-handlebars": "^7.0.7",
     "mongodb": "^5.3.0",
+    "mongoose": "^7.1.1",
     "mysql2": "^1.6.1",
-    "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11"
+    "pug": "^3.0.2",
+    "sequelize": "^6.31.1"
   }
 }
